err/django-vz-wiki.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_vz_wiki-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vz_wiki'...
Listing './lib/python3.5/site-packages/vz_wiki/templates'...
Listing './lib/python3.5/site-packages/vz_wiki/templates/vz_wiki'...
Listing './lib/python3.5/site-packages/vz_wiki/templatetags'...
Listing './lib/python3.5/site-packages/vz_wiki/utils'...
Compiling './lib/python3.5/site-packages/vz_wiki/utils/diff_match_patch.py'...
***   File "./lib/python3.5/site-packages/vz_wiki/utils/diff_match_patch.py", line 1133
    raise ValueError, "Invalid number in diff_fromDelta: " + param
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
